Implemented expr rewriter